--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -3,18 +3,18 @@
 
   <div class="form-horizontal form-group form-group-lg row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-      {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+      {{input type="email" value=model.email class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
     </div>
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-      {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="7" value=message}}
+      {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="7" value=model.message}}
     </div>
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-3">
-        <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'sendMessage'}}>Send message</button>
+        <button class="btn btn-primary btn-lg btn-block" disabled={{model.isNotValid}} {{action 'sendMessage' model}}>Send message</button>
     </div>
   </div>
 
-    {{#if respsonseMessage}}
-    <div class="alert alert-success">{{respsonseMessage}}</div>
+    {{#if responseMessage}}
+    <div class="alert alert-success">{{responseMessage}}</div>
     {{/if}}
 
 
