--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,9 +14,9 @@
         <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'saveInvitation'}}>Request invitation</button>
     </div>
   </div>
-  
-    {{#if respsonseMessage}}
-    <div class="alert alert-success">{{respsonseMessage}}</div>
+
+    {{#if responseMessage}}
+    <div class="alert alert-success">{{responseMessage}}</div>
     {{/if}}
 
 
