--- a/app/templates/admin/contacts.hbs
+++ b/app/templates/admin/contacts.hbs
@@ -5,6 +5,7 @@
     <tr>
       <th>Email</th>
       <th>Message</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -12,6 +13,9 @@
     <tr>
       <th>{{contact.email}}</th>
       <td>{{contact.message}}</td>
+      <td>
+        <button class="btn btn-danger btn-xs" {{action 'deleteContact' contact}}>Delete</button>
+      </td>
     </tr>
   {{/each}}
   </tbody>
